--- a/iris_colab.ipynb
+++ b/iris_colab.ipynb
@@ -6,6 +6,7 @@
       "name": "Copy of iris.ipynb",
       "version": "0.3.2",
       "provenance": [],
+      "collapsed_sections": [],
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1540,31 +1541,6 @@
             "tags": []
           },
           "execution_count": 31
-        }
-      ]
-    },
-    {
-      "metadata": {
-        "id": "KoykC6AwsJia",
-        "colab_type": "code",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 34
-        },
-        "outputId": "f5162483-e506-4478-b357-be6a7122039d"
-      },
-      "cell_type": "code",
-      "source": [
-        "!git status"
-      ],
-      "execution_count": 32,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "fatal: not a git repository (or any of the parent directories): .git\n"
-          ],
-          "name": "stdout"
         }
       ]
     },
